MVP框架的搭建

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -83,8 +83,9 @@
             android:layout_marginBottom="17dp"
             android:background="#00FFFFFF"
             android:ems="10"
+            android:hint="请输入验证码"
             android:inputType="textPersonName"
-            android:text="请输入验证码"
+            android:textColorHint="#101010"
             android:textSize="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textView10"
@@ -152,8 +153,9 @@
             android:layout_marginBottom="17dp"
             android:background="#00FFFFFF"
             android:ems="10"
+            android:hint="请输入手机号码"
             android:inputType="phone"
-            android:text="请输入手机号"
+            android:textColorHint="#101010"
             android:textSize="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -242,7 +244,7 @@
         android:layout_height="37dp"
         android:layout_marginStart="110dp"
         android:layout_marginLeft="110dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="126dp"
         android:layout_marginEnd="110dp"
         android:layout_marginRight="110dp"
         android:text="欢迎来到摄图"
@@ -263,7 +265,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="34dp"
         android:layout_marginEnd="331dp"
         android:layout_marginRight="331dp"
         android:layout_marginBottom="600dp"
